z-index fix

--- a/src/layout/mobileMenu/mobileMenuBtn/mobileMenuBtn.module.scss
+++ b/src/layout/mobileMenu/mobileMenuBtn/mobileMenuBtn.module.scss
@@ -13,6 +13,7 @@
     position: fixed;
     bottom: 5vh;
     right: 5vh;
+    z-index: 500;
 
     &:active{
         background-color: lighten( $black-1 , 10 );
